--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -12,15 +12,15 @@ body {
 
 .title {
   background: #e3f4ff;
-  margin: 8px;
   font-size: 16px;
   padding: 8px;
+  margin-bottom: 8px;
 }
 
 .content {
   background: #e3f4ff;
-  margin: 8px;
-  margin: 16px 8px;
+  margin-bottom: 8px;
+  padding: 16px 8px;
 }
 
 .button-container {
@@ -34,6 +34,5 @@ button {
   border: 1px solid #eee;
   padding: 8px 24px;
   display: block;
-  margin: 0 auto;
-  padding: 8px 24px;
+  margin: auto; 
 }
